# vitalgo-co

./: .gitignore  DEPLOYMENT.md  DEV_CONTEXT.md  DEV_STEPS.md  MANUAL_DE_MARCA.md  README.md  REDIRECT_CLOUDFARE.md  deploy.sh  docker-compose.dev.yml
backend/: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml  seed_countries.sql  seed_countries_complete.sql  test_signup_migration.py  verify_patient_data.py
backend/alembic/: env.py
backend/alembic/versions/: 9cdc2583c8ff_manually_add_missing_patient_columns.py
backend/shared/config/: settings.py
backend/shared/database/: database.py  models_test.py
backend/shared/exceptions/: application_exceptions.py
backend/shared/utils/: countries.py
backend/slices/allergies/application/dto/: allergy_dto.py
backend/slices/allergies/application/ports/: allergy_repository.py
backend/slices/allergies/application/use_cases/: manage_allergies.py
backend/slices/allergies/domain/models/: allergy_model.py
backend/slices/auth/application/dto/: __init__.py  (+3 more)
backend/slices/countries/: __init__.py
backend/slices/countries/application/: __init__.py  country_service.py
backend/slices/countries/domain/: __init__.py  country.py
backend/slices/countries/infrastructure/: __init__.py
backend/slices/emergency/application/: __init__.py
backend/slices/emergency/infrastructure/: __init__.py
backend/slices/emergency_access/: __init__.py
backend/slices/emergency_access/application/: __init__.py
backend/slices/emergency_access/infrastructure/: __init__.py
backend/slices/qr/infrastructure/: __init__.py
(+454 files in other folders)
