[tool.poetry]
name = "vitalgo-backend"
version = "0.1.0"
description = "VitalGo Backend API"
authors = ["VitalGo Team <team@vitalgo.com>"]
readme = "README.md"
packages = [{include = "vitalgo_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.2"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.43"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
redis = "^6.4.0"
pydantic = {extras = ["email"], version = "^2.11.9"}
pyjwt = "^2.10.1"
bcrypt = "^4.3.0"
python-multipart = "^0.0.20"
python-jose = "^3.5.0"
alembic = "^1.16.5"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"